Correctly aligns .aligncenter images.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -208,7 +208,7 @@ dl {
 }
 .aligncenter,
 .size-full.aligncenter {
-    margin: 1em 0;
+    margin: 1em auto;
 }
 .alignnone,
 .size-full.alignnone {
